force-app/main/default/objects/Apprenticeship__c/Apprenticeship__c.object-meta.xml
<CustomObject>
    <label>Apprenticeship</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Apprenticeship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apprenticeships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>