force-app/main/default/objects/Apprenticeship__c/fields/Apprentice_Pathway__c.field-meta.xml
<CustomField>
    <fullName>Apprentice_Pathway__c</fullName>
    <description>Created By: RS
Purpose: Apprenticeship dashboard build.</description>
    <label>Apprentice Pathway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Apprentice_Pathway</valueSetName>
    </valueSet>
</CustomField>