force-app/main/default/objects/Apprenticeship__c/fields/Apprenticeship_Description__c.field-meta.xml
<CustomField>
    <fullName>Apprenticeship_Description__c</fullName>
    <description>Created by JW
Business Unit: WFT
The description of this Apprenticeship&apos;s purpose.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Apprenticeship Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>