force-app/main/default/objects/Apprenticeship__c/fields/Apprenticeship_Lead__c.field-meta.xml
<CustomField>
    <fullName>Apprenticeship_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by JW
Business Unit: WFT
Keeps track of the Lead of this Apprenticeship.</description>
    <label>Apprenticeship Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Apprenticeships (Lead)</relationshipLabel>
    <relationshipName>Apprenticeships</relationshipName>
    <type>Lookup</type>
</CustomField>