force-app/main/default/objects/Apprenticeship__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Created by JW
Business Unit: WFT
Keeps track of when this Apprenticeship ends.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>