force-app/main/default/objects/Apprenticeship__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Created by JW
Business Unit: WFT
Tracks which Bitwise City this Apprenticeship is associated with.</description>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BW_Market</valueSetName>
    </valueSet>
</CustomField>