force-app/main/default/objects/Apprenticeship__c/fields/Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by JW</description>
    <inlineHelpText>Which Bitwise building is the primary location for this Apprenticeship?</inlineHelpText>
    <label>Primary Location</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Primary Location must be a Bitwise Building.</errorMessage>
        <filterItems>
            <field>Space__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Property</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Space__c</referenceTo>
    <relationshipLabel>Apprenticeships</relationshipLabel>
    <relationshipName>Apprenticeships</relationshipName>
    <type>Lookup</type>
</CustomField>