force-app/main/default/objects/Apprenticeship__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Created by JW
Business Unit: WFT
Keeps track of the date this Apprenticeship begins.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>