force-app/main/default/objects/Apprenticeship__c/fields/Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stack__c</fullName>
    <description>GS
Purpose: For WFT Apprenticeship Dashboard.</description>
    <label>Tech Stack</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apprentice_Pathway__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Apprentice_Tech_Stack</valueSetName>
    </valueSet>
</CustomField>