force-app/main/default/objects/Apprenticeship__c/listViews/All_Apprenticeships.listView-meta.xml
<ListView>
    <fullName>All_Apprenticeships</fullName>
    <columns>NAME</columns>
    <columns>Apprenticeship_Lead__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Market__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Apprenticeships</label>
    <sharedTo>
        <group>Tech_Support_Team</group>
        <group>VP_Team</group>
        <group>WFT_Instructor_Team</group>
        <group>WFT_TA_Team</group>
        <group>Workforce_Training_Team</group>
    </sharedTo>
</ListView>